--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div id="nav">
+            <ul>
+                <li>logo</li>
+                <li>projects</li>
+                <li>linkedin</li>
+                <li>github</li>
+                <li>lets talk</li>
+            </ul>
+        </div>
+        <header>
+            <img src="img/me.jpg" alt="me" width="30%" height="auto">
+            <p>Hi, I am <h1>Vaibhavy</h1> pronounced as vae-bh-we my pronouns are she/hers</p>
+        </header>
 
+        <div id="intro">
+            <p>I love creating new applications that are visually appealing and user-friendly. I experiment with mediums like 3D Design, Web Development, Console Applications, and  games.
+                My goal is to push the boundaries of immersive experiences and make a meaningful impact in technology and entertainment.</p>
+        </div>
+
+        <div id="skills">
+            <h3>skills   skills   skills   skills   skills</h3>
+            <ul>
+                <li>Autodesk Maya</li>
+                <li>Blender 3D </li>
+                <li>Unity</li>
+                <li>HTML, CSS</li>
+                <li>Javascript</li>
+                <li>C Sharp</li>
+                <li>C++</li>
+                <li>Figma</li>
+                <li>Metaspark AR</li>
+            </ul>
+        </div>
+        
+        <div id="projects">
+            <ul><h2>web development</h2></ul>
+            <ul><h2>games</h2></ul>
+            <ul><h2>xr</h2></ul>
+        </div>
     </body>
 </html>
