added colors, a little basis to how the website should look like

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     </head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
+    </style>
     <body>
         <div id="nav">
             <ul>
@@ -27,7 +30,7 @@
         </div>
 
         <div id="skills">
-            <h3>skills   skills   skills   skills   skills</h3>
+            <h2>skills   skills   skills   skills   skills</h2>
             <ul>
                 <li>Autodesk Maya</li>
                 <li>Blender 3D </li>
@@ -113,6 +116,10 @@
                 <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a>
                 <a href="https://github.com/vaibhavyxx">github</a>
             </div>
+
+            <footer>
+                Made by Vaibhavy Darshan
+            </footer>
         </div>
     </body>
 </html>
