made the layout similar to how i wanted

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
     <body>
         <div id="nav">
             <ul>
-                <li><a href="intro">logo</a></li>
+                <li><a href="#intro">logo</a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
                 <li><a href="#talk">let's talk</a></li>
             </ul>
         </div>
+        <div id="intro">
         <header>
             <img src="img/me.jpg" alt="me" width="30%" height="auto">
-            <p>Hi, I am <h1>Vaibhavy</h1> pronounced as vae-bh-we my pronouns are she/hers</p>
+            <div id="text">
+                <p>Hi, I am <h1>Vaibhavy</h1> pronounced as vae-bh-we my pronouns are she/hers</p>
+            </div>
         </header>
-
-        <div id="intro">
             <p>I love creating new applications that are visually appealing and user-friendly. I experiment with mediums like 3D Design, Web Development, Console Applications, and  games.
                 My goal is to push the boundaries of immersive experiences and make a meaningful impact in technology and entertainment.</p>
         </div>
