made js file for text animations

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="javascript" href="script.js">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
