--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>Vaibhavy</title>
         <link rel="stylesheet" href="style.css">
         <link rel="javascript" href="script.js">
         <link rel="preconnect" href="https://fonts.googleapis.com">
