--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <body>
         <div id="nav">
             <ul>
-                <li><a href="#intro">logo</a></li>
+                <li><a href="#intro"><img src="img/vd-logo.png" ></a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
                 <li><a href="#talk">let's talk</a></li>
             </ul>
         </div>
-        <div id="intro">
         <header>
             <img src="img/me.jpg" alt="me" width="30%" height="auto">
             <div id="text">
-                <p>Hi, I am <h1>Vaibhavy</h1> pronounced as vae-bh-we my pronouns are she/hers</p>
+                <p>Hi, I am <h1>Vaibhavy,</h1> pronounced as vae-bh-we.</p>
+
             </div>
         </header>
+        <div id="intro">
             <p>I love creating new applications that are visually appealing and user-friendly. I experiment with mediums like 3D Design, Web Development, Console Applications, and  games.
                 My goal is to push the boundaries of immersive experiences and make a meaningful impact in technology and entertainment.</p>
         </div>
@@ -110,16 +111,12 @@
                 <input type="submit" value="submit">
             </div>
 
-            <div id="details">
-                <h2>Let's Connect</h2>
-                <p>Currently in Rochester, New York</p>
-                <!--Use JS for time-->
-                <a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linked in</a>
-                <a href="https://github.com/vaibhavyxx">github</a>
-            </div>
-
             <footer>
-                Made by Vaibhavy Darshan
+                <ul>
+                    <li>Made by Vaibhavy Darshan</li>
+                    <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/linked in.png" height="5%" width="auto"></a></li>
+                    <li><a href="https://github.com/vaibhavyxx"><img src="img/logo.png" height= 5% width="auto"></a></li>
+                </ul>
             </footer>
         </div>
     </body>
