--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div id="web">
                 <h2>web development</h2>
                 <div id="rick">
-                    <!--Add an image-->
+                    <img src="img/rick.jpg" width="20%" height="auto">
                     <h3>Rick and Morty Search</h3>
                     <p>Using Rick and Morty's REST API, I built a website using HTML, CSS, and Javascript where users could search for different characters in the show.</p>
                 </div>
 
                 <div id="dress-up">
-                    <!--Add an image-->
+                    <img src="img/game.png" width="20%" height="auto">
                     <h3>Sarah's Dress Up</h3>
                     <p>Built with HTML, CSS, and Javascript with PIXI Library, I made a drag-and-drop game where users could dress up the mannequin however they wanted.</p>
                 </div>
