matched the layout to the prototype

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                 <h2>games</h2>
 
                 <div id="blood-of-christ">
-                    <!--Add an image-->
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Blood of Christ</h3>
                     <p>This was an academic project where we worked in a team of four people. Using Monogame Library, we made a 2D stealth platformer game where Count Vodka had to escape the Church. I worked on enemy movement and firing systems for the project. The firing system ensured the bullets were triggered when the player crossed a specific path.</p>
                 </div>
 
                 <div id="shump">
-                    <!--Add an image-->
+                    <img src="img/placeholder.jpg" height="40%" width="auto">
                     <h3>Shump</h3>
                     <p>It was an academic project where we had to make our collision system in Unity. I used the AABB collision system to make a simple Shump game using C#.</p>
                 </div>
@@ -85,13 +85,13 @@
                 <h2>xr</h2>
 
                 <div id="suburbs">
-                    <!--Add an image-->
+                    <img src="img/placeholder.jpg" height="40%" width="auto">
                     <h3>Suburbs</h3>
                     <p>Developed with HTML5, Javascript, and A-frame library, it mimics the look of a residential complex with a busy street.</p>
                 </div>
 
                 <div id="snowflakes">
-                    <!--Add an image-->
+                    <img src="img/placeholder.jpg" height="40%" width="auto">
                     <h3>Snowflakes</h3>
                     <p>It is a face-tracking AR application developed using Meta Spark AR to track the user’s face to make them appear blushing as it snows in the background. It was inspired by the Valentine’s Day theme.</p>
                 </div>
