added email for simpler use

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     <li>Made by Vaibhavy Darshan</li>
                     <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/linked in.png" height="5%" width="auto"></a></li>
                     <li><a href="https://github.com/vaibhavyxx"><img src="img/logo.png" height= 5% width="auto"></a></li>
+                    <li>vaibhavydarshan08@gmail.com</li>
                 </ul>
             </footer>
         </div>
