--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">    
+</head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
     </style>
     <body>
         <div id="nav">
             <ul>
-                <li><a href="#intro"><img src="img/vd-logo.png" ></a></li>
-                <li><a href="#projects">projects</a></li>
+                <button class="home">
+                    <li><a href="#intro"><img src="img/home.png" ></a></li>
+                </button>
+                <div class="home-content">
+                    <li><a href="#projects">projects</a></li>
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
                 <li><a href="#talk">let's talk</a></li>
+                </div>
             </ul>
         </div>
         <header>
