--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
     <body>
         <div id="nav">
             <ul>
-                <button class="home">
-                    <li><a href="#intro"><img src="img/home.png" ></a></li>
-                </button>
-                <div class="home-content">
+                
+                <li><a href="#intro"><img src="img/home.png" ></a></li>
                     <li><a href="#projects">projects</a></li>
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
                 <li><a href="#talk">let's talk</a></li>
-                </div>
+
             </ul>
         </div>
         <header>
@@ -37,7 +35,7 @@
         </div>
 
         <div id="skills">
-            <h2>skills   skills   skills   skills   skills</h2>
+            <h2>skills</h2>
             <ul>
                 <li>Autodesk Maya</li>
                 <li>Blender 3D </li>
@@ -80,7 +78,7 @@
                 </div>
 
                 <div id="shump">
-                    <img src="img/placeholder.jpg" height="40%" width="auto">
+                    <img src="img/placeholder.jpg">
                     <h3>Shump</h3>
                     <p>It was an academic project where we had to make our collision system in Unity. I used the AABB collision system to make a simple Shump game using C#.</p>
                 </div>
@@ -90,16 +88,12 @@
                 <h2>xr</h2>
 
                 <div id="suburbs">
-                    <img src="img/placeholder.jpg" height="40%" width="auto">
+                    <img src="img/view.png" >
                     <h3>Suburbs</h3>
                     <p>Developed with HTML5, Javascript, and A-frame library, it mimics the look of a residential complex with a busy street.</p>
                 </div>
 
-                <div id="snowflakes">
-                    <img src="img/placeholder.jpg" height="40%" width="auto">
-                    <h3>Snowflakes</h3>
-                    <p>It is a face-tracking AR application developed using Meta Spark AR to track the user’s face to make them appear blushing as it snows in the background. It was inspired by the Valentine’s Day theme.</p>
-                </div>
+                
             </div>
         </div>
 
