added a google form for talk to me

--- a/index.html
+++ b/index.html
@@ -99,16 +99,7 @@
 
         <div id="talk">
             <h1>let's talk</h1>
-            <div id="form">
-                <label for="fname">name: </label>
-                <input type="text" id="fname"><br>
-                <label for="femail">email: </label>
-                <input type="text" id="fname"><br>
-                <textarea id="message" name="message" rows="5" cols="80">
-                    Add your comment!
-                </textarea><br>
-                <input type="submit" value="submit">
-            </div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVFE1sWlQ_WMYMksSTVrZxPfuaKFpE3jlEq2UFAkO2t-yGcA/viewform?embedded=true" width="640" height="541" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
             <footer>
                 <ul>
