made nav bar sticky

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
                     <li>Made by Vaibhavy Darshan</li>
                     <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/linked in.png" height="5%" width="auto"></a></li>
                     <li><a href="https://github.com/vaibhavyxx"><img src="img/logo.png" height= 5% width="auto"></a></li>
+                    <li><a href="#intro"><img src="img/home.png" ></a></li>
+                    <li><a href="#projects">projects</a></li>
+                <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
+                <li><a href="https://github.com/vaibhavyxx">github</a></li>
+                <li><a href="#talk">let's talk</a></li>
+
                 </ul>
             </footer>
         </div>
