--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                 <h2>web development</h2>
                 <div id="rick">
                     <img src="img/rick.jpg" width="20%" height="auto">
-                    <h3>Rick and Morty Search</h3>
+                    <h3>Rick and Morty Search- <a href="https://people.rit.edu/vd5443/235/project2/">Play Here</a></h3>
                     <p>Using Rick and Morty's REST API, I built a website using HTML, CSS, and Javascript where users could search for different characters in the show.</p>
                 </div>
 
                 <div id="dress-up">
                     <img src="img/game.png" width="20%" height="auto">
-                    <h3>Sarah's Dress Up</h3>
+                    <h3>Sarah's Dress Up- <a href="https://people.rit.edu/vd5443/235/project3/">Play Here</a></h3>
                     <p>Built with HTML, CSS, and Javascript with PIXI Library, I made a drag-and-drop game where users could dress up the mannequin however they wanted.</p>
                 </div>
 
@@ -73,7 +73,7 @@
 
                 <div id="blood-of-christ">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h3>Blood of Christ</h3>
+                    <h3>Blood of Christ- <a href="https://github.com/yaboiedchoi/Blood-of-Christ">Github Repo</a> </h3>
                     <p>This was an academic project where we worked in a team of four people. Using Monogame Library, we made a 2D stealth platformer game where Count Vodka had to escape the Church. I worked on enemy movement and firing systems for the project. The firing system ensured the bullets were triggered when the player crossed a specific path.</p>
                 </div>
 
@@ -89,8 +89,15 @@
 
                 <div id="suburbs">
                     <img src="img/view.png" >
-                    <h3>Suburbs</h3>
+                    <h3>Suburbs- <a href="https://github.com/vaibhavyxx/Garden-AFrame">Github Repo</a></h3>
                     <p>Developed with HTML5, Javascript, and A-frame library, it mimics the look of a residential complex with a busy street.</p>
+                </div>
+
+                <div id="snowflakes">
+                    <h3>Snowflakes Face Tracking Filter- <a href="https://www.instagram.com/ar/235797232357120/?ch=MDE3NmE4YTQyYjAyMTA2NmVjYTJhNjQ2OTE5MTU5MjU%3D">Try Here</a></h3>
+                    <p>
+                        Using Spark AR, I made a simple face-tracking filter with snowflakes falling in the background. In addition, I also used LUTs to make the filter look more appealing.
+                    </p>
                 </div>
 
                 
