snowflakes has weird alignment

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
                 <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
                 <li><a href="https://github.com/vaibhavyxx">github</a></li>
                 <li><a href="#talk">let's talk</a></li>
-
             </ul>
         </div>
         <header>
             <img src="img/me.jpg" alt="me" width="30%" height="auto">
             <div id="text">
-                <p>Hi, I am <h1>Vaibhavy,</h1> pronounced as vae-bh-we.</p>
+                <p>Hi, I am <h1>Vaibhavy,</h1> pronounced as vae-bh-ve.</p>
 
             </div>
         </header>
@@ -111,13 +110,11 @@
             <footer>
                 <ul>
                     <li>Made by Vaibhavy Darshan</li>
-                    <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/linked in.png" height="5%" width="auto"></a></li>
-                    <li><a href="https://github.com/vaibhavyxx"><img src="img/logo.png" height= 5% width="auto"></a></li>
-                    <li><a href="#intro"><img src="img/home.png" ></a></li>
-                    <li><a href="#projects">projects</a></li>
-                <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/">linkedin</a></li>
-                <li><a href="https://github.com/vaibhavyxx">github</a></li>
-                <li><a href="#talk">let's talk</a></li>
+                    <li><a href="https://www.linkedin.com/in/vaibhavy-darshan-5a3184248/"><img src="img/linked in.png" height="2.5%" width="auto"></a></li>
+                    <li><a href="https://github.com/vaibhavyxx"><img src="img/logo.png" height= 2.5% width="auto"></a></li>
+                    <li><a href="#intro">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#talk">Let's Talk</a></li>
 
                 </ul>
             </footer>
