added content and made the form responsive

--- a/index.html
+++ b/index.html
@@ -56,13 +56,20 @@
                 <div id="rick">
                     <img src="img/rick.jpg" width="20%" height="auto">
                     <h3>Rick and Morty Search- <a href="https://people.rit.edu/vd5443/235/project2/">Play Here</a></h3>
-                    <p>Using Rick and Morty's REST API, I built a website using HTML, CSS, and Javascript where users could search for different characters in the show.</p>
+                    <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
+                        Completed within a month, the project enhanced my web development and API integration skills. 
+                       Overall, the project exemplified successful implementation, driving engagement and demonstrating proficiency in responsive design and user-centric development principles.
+                       </p>
                 </div>
 
                 <div id="dress-up">
                     <img src="img/game.png" width="20%" height="auto">
                     <h3>Sarah's Dress Up- <a href="https://people.rit.edu/vd5443/235/project3/">Play Here</a></h3>
-                    <p>Built with HTML, CSS, and Javascript with PIXI Library, I made a drag-and-drop game where users could dress up the mannequin however they wanted.</p>
+                    <p>Developed a dress-up game for Sarah using PIXI.js, HTML, CSS, and JavaScript. The objective was to create an interactive experience for players to customize avatars.
+                        Utilized Adobe Photoshop to design art assets for clothes and hair, ensuring seamless interaction using ES6 classes. Integrated music to enhance player engagement and enjoyment.
+                        Employed HTML, CSS, and JavaScript to build the game interface, implementing click-on features and avatar customization options. 
+                        Successfully delivered a captivating dress-up game for Sarah, offering immersive customization features and seamless interaction. 
+                        </p>
                 </div>
 
             </div>
@@ -73,13 +80,24 @@
                 <div id="blood-of-christ">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Blood of Christ- <a href="https://github.com/yaboiedchoi/Blood-of-Christ">Github Repo</a> </h3>
-                    <p>This was an academic project where we worked in a team of four people. Using Monogame Library, we made a 2D stealth platformer game where Count Vodka had to escape the Church. I worked on enemy movement and firing systems for the project. The firing system ensured the bullets were triggered when the player crossed a specific path.</p>
+                    <p>Collaborated with a team of four to develop a Monogame project using C# .NET. My specific responsibilities included implementing the firing system and player movement mechanics and contributing to integrating path-finding functionalities.</p>
+                    <p>Focused on creating a robust firing system and smooth player movement to enhance the game's interactivity and user experience. </p>
+                    <p>Utilized C# .NET within the Monogame framework to develop the designated features, applying object-oriented programming principles for code efficiency and maintainability, and worked closely with team members for effective communication and collaboration. Conducted playtesting sessions to gather audience feedback, iterating on the game mechanics based on user responses.</p>
+                    <p>Successfully delivered a polished Monogame project, receiving positive feedback from the audience and instructors during the class presentation. Achieved the overall goal of earning a good grade in the class, reflecting the effectiveness of our teamwork, technical skills, and responsiveness to user feedback.
+                    </p>
                 </div>
 
                 <div id="shump">
                     <img src="img/placeholder.jpg">
                     <h3>Shump</h3>
                     <p>It was an academic project where we had to make our collision system in Unity. I used the AABB collision system to make a simple Shump game using C#.</p>
+                </div>
+
+                <div id="hangman">
+                    <h3>Hangman- <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman">Github Repo</a></h3>
+                    <p>Worked on this C++ project to make a Hangman game to understand fundamental C++ concepts. I used character arrays and challenged myself to solve without pointers. </p>
+                    <p>Employed C++ to construct the Hangman game, leveraging character arrays for data storage while maintaining memory efficiency. Overcame the absence of pointers by devising alternative solutions, fostering a deeper understanding of array manipulation. Incorporated ASCII art to enhance the game's visual appeal, adding a creative touch to the project.</p>
+                    <p>Successfully developed a functional Hangman game in C++, showcasing newfound proficiency with character arrays and problem-solving skills. </p>
                 </div>
             </div>
 
@@ -105,7 +123,7 @@
 
         <div id="talk">
             <h1>let's talk</h1>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVFE1sWlQ_WMYMksSTVrZxPfuaKFpE3jlEq2UFAkO2t-yGcA/viewform?embedded=true" width="640" height="541" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVFE1sWlQ_WMYMksSTVrZxPfuaKFpE3jlEq2UFAkO2t-yGcA/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
             <footer>
                 <ul>
