--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <div id="dress-up">
-                    <img src="img/game.png" width="20%" height="auto">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>Sarah's Dress Up- <a href="https://people.rit.edu/vd5443/235/project3/">Play Here</a></h3>
                     <p>Developed a dress-up game for Sarah using PIXI.js, HTML, CSS, and JavaScript. The objective was to create an interactive experience for players to customize avatars.
                         Utilized Adobe Photoshop to design art assets for clothes and hair, ensuring seamless interaction using ES6 classes. Integrated music to enhance player engagement and enjoyment.
