--- a/index.html
+++ b/index.html
@@ -88,10 +88,14 @@
                     </p>
                 </div>
 
-                <div id="shump">
-                    <img src="img/placeholder.jpg">
-                    <h3>Shump</h3>
-                    <p>It was an academic project where we had to make our collision system in Unity. I used the AABB collision system to make a simple Shump game using C#.</p>
+                <div id="game-of-life">
+                    
+                    <h3>Game of Life <a href="https://github.com/Erin-Cascioli-IGM/106-personal-repo-vaibhavyxx/tree/main/Homework/Game%20of%20Life">Play Here!</a></h3>
+                    <p>
+                        I developed a Game of Life simulation using C# for an academic project. The Game of Life is a cellular automaton devised by the mathematician John Conway, where cells evolve based on predefined rules. My implementation utilized object-oriented programming principles and advanced data structures to create a dynamic and interactive simulation.
+                    </p>
+                    <p>The Game of Life project showcases several key features aimed at enhancing user experience and functionality. It includes a Random Board Generation feature, allowing for the creation of diverse initial board configurations with unique starting patterns for each simulation run. The Display Board functionality provides users with a visual representation of the evolving cellular automaton, enabling them to observe the state of the game board in real-time. Additionally, File I/O Operations have been implemented to facilitate loading and saving game configurations from external files, empowering users to specify custom starting patterns and save their progress for future sessions. The project also incorporates Advanced Simulation Logic, employing complex algorithms and 2D array manipulation techniques to implement the core rules of the Game of Life, including cell survival, birth, and death. Furthermore, Extra Credit Features, such as calculating the percentage of live cells on the board and automatically resetting the board under certain conditions, have been included to enhance the overall functionality and user experience of the application.</p>
+                    <p>This project challenged me to apply theoretical programming concepts to a real-world problem, enhancing my understanding of data structures, algorithms, and software design principles. It provided valuable hands-on experience developing complex simulations and reinforced my passion for creating innovative solutions through code.                    </p>
                 </div>
 
                 <div id="hangman">
