moved into a folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Vaibhavy</title>
         <link rel="javascript" href="script.js">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="icon/favicon.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">    
