updated font weight and added icons need to touch up more

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <h2>web development</h2>
                 <div id="rick">
                     <img src="img/rick.jpg" width="20%" height="auto">
-                    <h3>Rick and Morty Search- <a href="https://people.rit.edu/vd5443/235/project2/">Play Here</a></h3>
+                    <h3>Rick and Morty Search- <a href="https://people.rit.edu/vd5443/235/project2/">
+                        <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
                         Completed within a month, the project enhanced my web development and API integration skills. 
                        Overall, the project exemplified successful implementation, driving engagement and demonstrating proficiency in responsive design and user-centric development principles.
@@ -65,7 +66,8 @@
 
                 <div id="dress-up">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h3>Sarah's Dress Up- <a href="https://people.rit.edu/vd5443/235/project3/">Play Here</a></h3>
+                    <h3>Sarah's Dress Up- <a href="https://people.rit.edu/vd5443/235/project3/">
+                        <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>Developed a dress-up game for Sarah using PIXI.js, HTML, CSS, and JavaScript. The objective was to create an interactive experience for players to customize avatars.
                         Utilized Adobe Photoshop to design art assets for clothes and hair, ensuring seamless interaction using ES6 classes. Integrated music to enhance player engagement and enjoyment.
                         Employed HTML, CSS, and JavaScript to build the game interface, implementing click-on features and avatar customization options. 
@@ -80,7 +82,7 @@
 
                 <div id="blood-of-christ">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h3>Blood of Christ- <a href="https://github.com/yaboiedchoi/Blood-of-Christ">Github Repo</a> </h3>
+                    <h3>Blood of Christ <a href="https://github.com/yaboiedchoi/Blood-of-Christ"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
                     <p>Collaborated with a team of four to develop a Monogame project using C# .NET. My specific responsibilities included implementing the firing system and player movement mechanics and contributing to integrating path-finding functionalities.</p>
                     <p>Focused on creating a robust firing system and smooth player movement to enhance the game's interactivity and user experience. </p>
                     <p>Utilized C# .NET within the Monogame framework to develop the designated features, applying object-oriented programming principles for code efficiency and maintainability, and worked closely with team members for effective communication and collaboration. Conducted playtesting sessions to gather audience feedback, iterating on the game mechanics based on user responses.</p>
@@ -90,7 +92,8 @@
 
                 <div id="game-of-life">
                     
-                    <h3>Game of Life <a href="https://github.com/Erin-Cascioli-IGM/106-personal-repo-vaibhavyxx/tree/main/Homework/Game%20of%20Life">Play Here!</a></h3>
+                    <h3>Game of Life <a href="https://github.com/Erin-Cascioli-IGM/106-personal-repo-vaibhavyxx/tree/main/Homework/Game%20of%20Life">
+                        <img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>
                     <p>
                         I developed a Game of Life simulation using C# for an academic project. The Game of Life is a cellular automaton devised by the mathematician John Conway, where cells evolve based on predefined rules. My implementation utilized object-oriented programming principles and advanced data structures to create a dynamic and interactive simulation.
                     </p>
@@ -99,7 +102,7 @@
                 </div>
 
                 <div id="hangman">
-                    <h3>Hangman- <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman">Github Repo</a></h3>
+                    <h3>Hangman <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>
                     <p>Worked on this C++ project to make a Hangman game to understand fundamental C++ concepts. I used character arrays and challenged myself to solve without pointers. </p>
                     <p>Employed C++ to construct the Hangman game, leveraging character arrays for data storage while maintaining memory efficiency. Overcame the absence of pointers by devising alternative solutions, fostering a deeper understanding of array manipulation. Incorporated ASCII art to enhance the game's visual appeal, adding a creative touch to the project.</p>
                     <p>Successfully developed a functional Hangman game in C++, showcasing newfound proficiency with character arrays and problem-solving skills. </p>
@@ -111,12 +114,13 @@
 
                 <div id="suburbs">
                     <img src="img/view.png" >
-                    <h3>Suburbs- <a href="https://github.com/vaibhavyxx/Garden-AFrame">Github Repo</a></h3>
+                    <h3>Suburbs</h3> <!--  <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>-->
                     <p>Developed with HTML5, Javascript, and A-frame library, it mimics the look of a residential complex with a busy street.</p>
                 </div>
 
                 <div id="snowflakes">
-                    <h3>Snowflakes Face Tracking Filter- <a href="https://www.instagram.com/ar/235797232357120/?ch=MDE3NmE4YTQyYjAyMTA2NmVjYTJhNjQ2OTE5MTU5MjU%3D">Try Here</a></h3>
+                    <h3>Snowflakes Face Tracking Filter- <a href="https://www.instagram.com/ar/235797232357120/?ch=MDE3NmE4YTQyYjAyMTA2NmVjYTJhNjQ2OTE5MTU5MjU%3D">
+                        <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>
                         Using Spark AR, I made a simple face-tracking filter with snowflakes falling in the background. In addition, I also used LUTs to make the filter look more appealing.
                     </p>
