--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Vaibhavy</title>
-        <link rel="javascript" href="script.js">
+        <script src="script.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="icon" type="image/x-icon" href="icon/favicon.ico">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -132,6 +132,7 @@
 
         <div id="talk">
             <h1>let's talk</h1>
+            <p id="time"></p>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVFE1sWlQ_WMYMksSTVrZxPfuaKFpE3jlEq2UFAkO2t-yGcA/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
             <footer>
