--- a/index.html
+++ b/index.html
@@ -54,32 +54,30 @@
 
             <div id="graphic-design">
                 <h2>graphic design</h2>
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img class="d-block w-100" src="..." alt="First slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Second slide">
-                      </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="..." alt="Third slide">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
+                <div id="music">
+                    <h3>Thank You Card for Akira Takeuchi</h3>
+                    <img src="img/Akira Takeuchi.png" src="A virtual card to thank Akira Takeuchi" width="70%" height="auto">
+                </div>
+
+                <div id="turtles">
+                    <h3>Thank You Card for Emily</h3>
+                    <img src="img/Thank you.png" src="A virtual card for Emily" width="70%" height="auto">
+                </div>
+
+                <div id="smilies">
+                    <h3>Thank You Card for Malcom</h3>
+                    <img src="img/thank you (1).png" src="A virtual card for Malcom" width="70%" height="auto">
+                </div>
+
+                <div id="butterfly">
+                    <h3>Thank You Card for Butterfly Garden</h3>
+                    <img src="img/ling.png" src="A virtual card for Butterfly Garden" width="70%" height="auto">
+                </div>
+
+                <div id="flyer">
+                    <h3>Flyer for an Upcoming Class</h3>
+                    <img src="img/"
+                </div>
             </div>
             <div id="web">
                 <h2>web development</h2>
