--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <div id="flyer">
                     <h3>Flyer for an Upcoming Class</h3>
-                    <img src="img/"
+                    <img src="img/Flyer.png" width="70%" height="auto">
                 </div>
             </div>
             <div id="web">
@@ -117,6 +117,7 @@
                     </p>
                 </div>
 
+                <!--add happy taxing-->
                 <div id="game-of-life">
                     
                     <h3>Game of Life <a href="https://github.com/Erin-Cascioli-IGM/106-personal-repo-vaibhavyxx/tree/main/Homework/Game%20of%20Life">
@@ -154,9 +155,18 @@
                         Using Spark AR, I made a simple face-tracking filter with snowflakes falling in the background. In addition, I also used LUTs to make the filter look more appealing.
                     </p>
                     <p>Take a look <a href="https://youtube.com/shorts/3JT2-3xf0Bo?feature=shared">here</a>!</p>
+                    <iframe src="https://youtube.com/shorts/3JT2-3xf0Bo?feature=shared" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                 </div>
 
+                <div id="marker-based">
+                    <h3>Marker Based AR</h3>
+                    <p>Currently a work in progress, but I plan on making the model and allow user to customize it. In this case, it is a radio where user can play music if they feel like.</p>
+                </div>
                 
+                <div id="location-based">
+                    <h3>Marker Based AR</h3>
+                    <p>Currently a work in progress, but from a certain point of view users can get a jumpscare effect.</p>
+                </div>
             </div>
         </div>
 
