--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2>web development</h2>
                 <div id="rick">
                     <img src="img/rick.jpg" width="20%" height="auto">
-                    <h3>Rick and Morty Search- <a href="https://people.rit.edu/vd5443/235/project2/">
+                    <h3>Rick and Morty Search (JavaScript with REST API) <a href="https://people.rit.edu/vd5443/235/project2/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>I developed a Rick and Morty search engine website, integrating a REST API with JavaScript, HTML, and CSS. 
                         Completed within a month, the project enhanced my web development and API integration skills. 
@@ -93,7 +93,7 @@
 
                 <div id="dress-up">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/7BPSiUE2d_E?si=pvvsK-UW_AT8xnp9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h3>Sarah's Dress Up- <a href="https://people.rit.edu/vd5443/235/project3/">
+                    <h3>Sarah's Dress Up (JavaScript PIXI) <a href="https://people.rit.edu/vd5443/235/project3/">
                         <img src="img/play.jpg" width="32px" height="auto" alt="Play Button"></a></h3>
                     <p>Developed a dress-up game for Sarah using PIXI.js, HTML, CSS, and JavaScript. The objective was to create an interactive experience for players to customize avatars.
                         Utilized Adobe Photoshop to design art assets for clothes and hair, ensuring seamless interaction using ES6 classes. Integrated music to enhance player engagement and enjoyment.
@@ -109,7 +109,7 @@
 
                 <div id="blood-of-christ">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/r1dVFSVRA6Q?si=qUyH5DTKnrlCBQJ2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <h3>Blood of Christ <a href="https://github.com/yaboiedchoi/Blood-of-Christ"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
+                    <h3>Blood of Christ (C# Monogame)<a href="https://github.com/yaboiedchoi/Blood-of-Christ"><img src="img/logo.png" height= 2.5% width="auto"></a> </h3>
                     <p>Collaborated with a team of four to develop a Monogame project using C# .NET. My specific responsibilities included implementing the firing system and player movement mechanics and contributing to integrating path-finding functionalities.</p>
                     <p>Focused on creating a robust firing system and smooth player movement to enhance the game's interactivity and user experience. </p>
                     <p>Utilized C# .NET within the Monogame framework to develop the designated features, applying object-oriented programming principles for code efficiency and maintainability, and worked closely with team members for effective communication and collaboration. Conducted playtesting sessions to gather audience feedback, iterating on the game mechanics based on user responses.</p>
@@ -120,7 +120,7 @@
                 <!--add happy taxing-->
                 <div id="game-of-life">
                     
-                    <h3>Game of Life <a href="https://github.com/Erin-Cascioli-IGM/106-personal-repo-vaibhavyxx/tree/main/Homework/Game%20of%20Life">
+                    <h3>Game of Life (C# Console App)<a href="https://github.com/Erin-Cascioli-IGM/106-personal-repo-vaibhavyxx/tree/main/Homework/Game%20of%20Life">
                         <img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>
                     <p>
                         I developed a Game of Life simulation using C# for an academic project. The Game of Life is a cellular automaton devised by the mathematician John Conway, where cells evolve based on predefined rules. My implementation utilized object-oriented programming principles and advanced data structures to create a dynamic and interactive simulation.
@@ -130,10 +130,21 @@
                 </div>
 
                 <div id="hangman">
-                    <h3>Hangman <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></a></h3>
+                    <h3>Hangman (C++ Console App) <a href="https://github.com/IGME-209/dsa1-spring24-vaibhavyxx/tree/master/HW1/Hangman"><img src="img/logo.png" height= 2.5% width="auto"></a></h3>
                     <p>Worked on this C++ project to make a Hangman game to understand fundamental C++ concepts. I used character arrays and challenged myself to solve without pointers. </p>
                     <p>Employed C++ to construct the Hangman game, leveraging character arrays for data storage while maintaining memory efficiency. Overcame the absence of pointers by devising alternative solutions, fostering a deeper understanding of array manipulation. Incorporated ASCII art to enhance the game's visual appeal, adding a creative touch to the project.</p>
                     <p>Successfully developed a functional Hangman game in C++, showcasing newfound proficiency with character arrays and problem-solving skills. </p>
+                </div>
+
+                <div id="happy-taxing">
+                    <h3>Happy Taxing (Unity 2D) <a href="https://github.com/vaibhavyxx/Happy-Taxing-2"><img src="img/logo.png" height= 2.5% width="auto"></a> <i>WicHacks Hackathon entry</i></h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ROEuNN_UvWY?si=g2J3ipg5xocB0ELh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p>Worked in a team of two: <a href="">Edward Choi</a> and <a href="">Lisa Pham</a> to make a finance based game.
+                    Finances are often the most challenging part of being an adult. It is something that can make or break your future, like a good credit score can give you a lower interest on a car and how one should maintain it. However, nobody really teaches finance so we wanted to make a fun immersive game to get children interested in finance and become financially literal.</p>
+                    <p>For the first draft of this game, we had tried to use JavaScript's PIXI Library but due to difficulties we had switched it to Unity 2D with C# .Net using GitHub.</p>
+                    <p>Initially, we tried to use JavaScript's Pixi Library to make the game on web browser but there was difficulty uploading textures. So, after a few failed attempts, we tried to build this game again with Unity using GitHub for version control. Since, it was our first time using Git simultaneously, we ran into a lot of merge issues which made us make a backup repository. Luckily, most of our merges were solved out and we worked pretty fast to get our barebones done.</p>
+                    <p><i>Read the <a href="https://devpost.com/software/happy-taxing">devpost</a> to know more! </i></p>
+                    
                 </div>
             </div>
 
